tests/neg-custom-args/captures/capt1.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/capt1.scala:5:2 ------------------------------------------
5 |  () => if x == null then y else y  // error
  |  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |  Found:    () ->{x} C
  |  Required: () -> C
  |
  |  Note that capability `x` cannot flow into capture set {}.
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/capt1.scala:8:2 ------------------------------------------
8 |  () => if x == null then y else y  // error
  |  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |  Found:    () ->{x} C^'s1
  |  Required: Matchable
  |
  |  Note that capability `x` cannot flow into capture set {}.
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/capt1.scala:16:2 -----------------------------------------
16 |  f  // error
   |  ^
   |  Found:    (y: Int) ->{x} Int
   |  Required: Matchable
   |
   |  Note that capability `x` cannot flow into capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/capt1.scala:24:2 -----------------------------------------
24 |  F(22)  // error
   |  ^^^^^
   |  Found:    A^{x}
   |  Required: A
   |
   |  Note that capability `x` cannot flow into capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/capt1.scala:27:2 -----------------------------------------
27 |  new A: // error
   |  ^
   |  Found:    A^{x}
   |  Required: A
   |
   |  Note that capability `x` cannot flow into capture set {}.
   |
28 |    def m() = if x == null then y else y
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/capt1.scala:38:51 -------------------------------------------------------------
38 |  val z3 = h[(() -> Cap) @retains[x.type]](() => x)(() => C())  // error
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |           Separation failure: Illegal access to {x} which is hidden by the previous definition
   |           of value z2 with type () ->{} C^.
   |           This type hides capabilities  {any, x}
   |
   |           where:    ^   refers to a root capability in the type of value z2
   |                     any is a root capability created in value z2
-- Error: tests/neg-custom-args/captures/capt1.scala:40:25 -------------------------------------------------------------
40 |  val z1: () => Cap = f1(x) // error
   |                         ^
   |                         Separation failure: Illegal access to {x} which is hidden by the previous definition
   |                         of value z3 with type () ->{x} C^.
   |                         This type hides capabilities  {any, x}
   |
   |                         where:    ^   refers to a root capability in the type of value z3
   |                                   any is a root capability created in value z3
-- Error: tests/neg-custom-args/captures/capt1.scala:43:7 --------------------------------------------------------------
43 |    if x == null then  // error: separation
   |       ^
   |       Separation failure: Illegal access to {x} which is hidden by the previous definition
   |       of value z1 with type () => C^.
   |       This type hides capabilities  {x}
   |
   |       where:    => refers to a root capability in the type of value z1
   |                 ^  refers to a root capability in the type of value z1
-- Error: tests/neg-custom-args/captures/capt1.scala:44:12 -------------------------------------------------------------
44 |      () => x  // error: separation
   |            ^
   |            Separation failure: Illegal access to {x} which is hidden by the previous definition
   |            of value z1 with type () => C^.
   |            This type hides capabilities  {x}
   |
   |            where:    => refers to a root capability in the type of value z1
   |                      ^  refers to a root capability in the type of value z1
-- Error: tests/neg-custom-args/captures/capt1.scala:47:2 --------------------------------------------------------------
47 |  x // error: separation
   |  ^
   |  Separation failure: Illegal access to {x} which is hidden by the previous definition
   |  of value z1 with type () => C^.
   |  This type hides capabilities  {x}
   |
   |  where:    => refers to a root capability in the type of value z1
   |            ^  refers to a root capability in the type of value z1
